<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constraintCircleRadius="20dp"
    android:orientation="vertical" android:layout_width="400dp"
    android:layout_height="match_parent"
    android:background="#ecf0f1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_city"
        android:layout_margin="15dp"
        android:textSize="36sp"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:padding="10dp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/edtEditTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/edit_your_city"
        android:paddingTop="10dp"
        android:textSize="30sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:srcCompat="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textSize="26sp" />

        <Button
            android:id="@+id/btnCancelEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/cancel"
            android:textSize="26sp" />

    </LinearLayout>

</LinearLayout>