<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="400dp"
    android:layout_height="match_parent"
    app:layout_constraintCircleRadius="25dp"
    android:background="#ecf0f1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add Cites"
        android:paddingLeft="20dp"
        android:textSize="36sp"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:padding="10dp"
        android:textStyle="bold"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtTask"
        android:hint="@string/enter_new_city"
        android:textSize="30sp"
        android:layout_margin="5dp"
        android:paddingTop="10dp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
       android:src="@color/colorPrimaryDark" />

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textSize="26sp"
            android:id="@+id/btnOk"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="26sp"
            android:layout_marginStart="10dp"
            android:id="@+id/btnCancel"/>

    </LinearLayout>

</LinearLayout>