<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:backgroundTint="#FFFFFF">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:foregroundTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/homeLocationDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"

                android:text="@string/set_your_home_location"
                android:textColor="@color/colorLight"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/homeLocationSetting" />

            <TextView
                android:id="@+id/favouriteLocationsDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/set_your_favourite_locations"
                android:textColor="@color/colorLight"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/favourite_location_3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/favouriteLocationsSetting"
                app:layout_constraintVertical_bias="0.055" />

            <TextView
                android:id="@+id/fingerprintTextView"
                android:layout_width="156dp"
                android:layout_height="43dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="17dp"
                android:gravity="center"
                android:text="@string/metric_imperial"
                android:textColor="@color/colorLight"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settingsHeading" />

            <TextView
                android:id="@+id/homeLocationSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:text="@string/home_location"
                android:textColor="@color/colorLight"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fingerprintDescription" />

            <TextView
                android:id="@+id/favouriteLocationsSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:text="@string/favourite_locations"
                android:textColor="@color/colorLight"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/homeLocationDescription" />

            <TextView
                android:id="@+id/fingerprintDescription"
                android:layout_width="138dp"
                android:layout_height="52dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/change_lang"
                android:textColor="@color/colorLight"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/unitsChangeLang"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fingerprintTextView"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/settingsHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/settings"
                android:textColor="@color/colorLight"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.507"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/pressureImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/settingsHeading"
                app:layout_constraintEnd_toStartOf="@+id/settingsHeading"
                app:layout_constraintTop_toTopOf="@+id/settingsHeading"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_settings" />

            <ToggleButton
                android:id="@+id/unitsSelector"
                style="@android:style/Widget.Button.Toggle"
                android:layout_width="105dp"
                android:layout_height="53dp"
                android:layout_marginEnd="84dp"
                android:background="@color/colorLight"
                android:gravity="center"
                android:text="@string/units"
                android:textColor="@color/colorAccent"
                android:textOff="@string/metric"
                android:textOn="@string/imperial"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/fingerprintTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/fingerprintTextView" />

            <ToggleButton
                android:id="@+id/unitsChangeLang"
                style="@android:style/Widget.Button.Toggle"
                android:layout_width="105dp"
                android:layout_height="53dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="84dp"
                android:background="@color/colorLight"
                android:text="Units"
                android:textColor="@color/colorAccent"
                android:textOn="@string/english_en"
                android:textOff="@string/vietnam_vi"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/fingerprintTextView" />

            <AutoCompleteTextView
                android:id="@+id/home_location"
                android:layout_width="164dp"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:completionThreshold="2"
                android:ems="10"
                android:padding="16dp"
                android:text="@string/ho_chi_minh_city"
                android:textColor="@color/colorLight"
                android:textColorHint="@color/colorLight"
                android:textSize="14sp"
                app:backgroundTint="@color/colorLight"
                app:layout_constraintBottom_toBottomOf="@+id/homeLocationDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.816"
                app:layout_constraintStart_toEndOf="@+id/homeLocationDescription"
                app:layout_constraintTop_toTopOf="@+id/homeLocationSetting"
                app:layout_constraintVertical_bias="0.533" />

            <AutoCompleteTextView
                android:id="@+id/favourite_location_1"
                android:layout_width="164dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:completionThreshold="2"
                android:ems="10"
                android:padding="16dp"
                android:textColor="@color/colorLight"
                android:textColorHint="@color/colorAccent"
                android:textSize="14sp"
                app:backgroundTint="@color/colorLight"
                app:layout_constraintEnd_toStartOf="@+id/favourite_location_3"
                app:layout_constraintHorizontal_bias="0.076"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/favouriteLocationsDescription" />

            <AutoCompleteTextView
                android:id="@+id/favourite_location_2"
                android:layout_width="164dp"
                android:layout_height="47dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="36dp"
                android:completionThreshold="2"
                android:ems="10"
                android:text="London"
                android:padding="16dp"
                android:textColor="@color/colorLight"
                android:textColorHint="@color/colorLight"
                android:textSize="14sp"
                app:backgroundTint="@color/colorLight"
                app:layout_constraintBottom_toTopOf="@+id/favourite_location_1"
                app:layout_constraintStart_toEndOf="@+id/favouriteLocationsSetting"
                app:layout_constraintTop_toBottomOf="@+id/home_location"
                app:layout_constraintVertical_bias="0.142" />

            <AutoCompleteTextView
                android:id="@+id/favourite_location_3"
                android:layout_width="164dp"
                android:layout_height="45dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="28dp"
                android:completionThreshold="2"
                android:ems="10"
                android:padding="16dp"
                android:textColor="@color/colorLight"
                android:textColorHint="@color/colorLight"
                android:textSize="14sp"
                app:backgroundTint="@color/colorLight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/favourite_location_1"
                app:layout_constraintTop_toBottomOf="@+id/favourite_location_2" />

            <AutoCompleteTextView
                android:id="@+id/favourite_location_4"
                android:layout_width="164dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="55dp"
                android:completionThreshold="2"
                android:ems="10"
                android:padding="16dp"
                android:textColor="@color/colorLight"
                android:textColorHint="@color/colorLight"
                android:textSize="14sp"
                app:backgroundTint="@color/colorLight"
                app:layout_constraintBottom_toBottomOf="@+id/favourite_location_5"
                app:layout_constraintEnd_toStartOf="@+id/favourite_location_5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/favourite_location_1"
                app:layout_constraintVertical_bias="1.0" />

            <AutoCompleteTextView
                android:id="@+id/favourite_location_5"
                android:layout_width="164dp"
                android:layout_height="45dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="132dp"
                android:completionThreshold="2"
                android:ems="10"
                android:padding="16dp"
                android:textColor="@color/colorLight"
                android:textColorHint="@color/colorLight"
                android:textSize="14sp"
                app:backgroundTint="@color/colorLight"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/favourite_location_4"
                app:layout_constraintTop_toBottomOf="@+id/favourite_location_1"
                app:layout_constraintVertical_bias="0.151" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/save_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@color/colorLight" />

    <TextView
        android:id="@+id/save_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/save_button"
        app:layout_constraintEnd_toEndOf="@+id/save_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/save_button" />

</androidx.constraintlayout.widget.ConstraintLayout>